--- a/Chapter_9.ipynb
+++ b/Chapter_9.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3xd9pJld49zfUwMn7osZn",
+      "authorship_tag": "ABX9TyMWBMOE8zXGvn5RWQ5dNZd7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
         "id": "VA0ZBz2ns-KD",
         "outputId": "a09b472f-5f23-4d33-d5bd-0ecf63e72439"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +96,7 @@
         "id": "goD3yDZ1w9eu",
         "outputId": "12b4e673-df79-4aeb-8a95-d73b810f60b5"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +139,7 @@
         "id": "jBoGC0k5yXqo",
         "outputId": "f8501c1f-3973-411f-a5fe-6435effbd922"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,7 +191,7 @@
         "id": "E3daFz3Zy3tM",
         "outputId": "cd4e169b-fba1-45e1-aed8-1bae17ee5641"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,7 +247,7 @@
         "id": "Bt26M4so0uQ8",
         "outputId": "f2d9aed8-4589-44fa-d58a-82acb56be130"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +294,7 @@
         "id": "NkLYTBUd1OiH",
         "outputId": "d37c5ee3-281b-42ca-dccf-f3d49aa20b41"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,7 +340,7 @@
         "id": "sU25BprD2YRa",
         "outputId": "ab3ca4ca-3067-4d8b-fb65-b6845a3987c5"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,7 +388,7 @@
         "id": "OcLUXvIK5bOL",
         "outputId": "3fc65742-48ce-4c77-bdf1-31060c9d4be3"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,7 +430,7 @@
         "id": "L7htdrv-8ZWN",
         "outputId": "48359dd1-43ec-4ec8-cd21-a063b6262d94"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -453,6 +453,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Python Magic methods are the methods starting and ending with double underscores ‘__’.\n",
+        "\n",
         "class Book():\n",
         "  def __init__(self,title,author):\n",
         "    self.title = title\n",
@@ -472,13 +474,50 @@
         "id": "JaVxLV4P-nz_",
         "outputId": "fd4ad794-b8f4-45f7-ae38-41c4809c6868"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Harry Potter By : JKRowling\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Number():\n",
+        "  def __init__(self,value):\n",
+        "    self.value = value\n",
+        "  def __add__(self,new_number):\n",
+        "    return self.value + new_number\n",
+        "  def __eq__(self, new_number):\n",
+        "    return self.value == new_number\n",
+        "\n",
+        "\n",
+        "\n",
+        "num = Number(1000)\n",
+        "print(num+10)\n",
+        "print(num==1000)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fPUIl3tl-hTV",
+        "outputId": "8eb623c0-780c-4b0a-bba7-1b7cc53bde17"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1010\n",
+            "True\n",
+            "<__main__.Number object at 0x7d215c923910>\n"
           ]
         }
       ]
@@ -515,7 +554,7 @@
         "id": "Zp39zo_HBJcH",
         "outputId": "2344d143-238a-4c4f-f948-38a320b05095"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -539,49 +578,142 @@
       "cell_type": "code",
       "source": [
         "class BankAccount():\n",
-        "  def __init__(self,account_number,initial_balance=0):\n",
-        "    self.__account_number = account_number\n",
-        "    self.__initial_balance = initial_balance\n",
+        "  def __init__(self,account_number,initial_balance=0.0):\n",
+        "    self.account_number = account_number\n",
+        "    self.initial_balance = initial_balance\n",
         "\n",
         "  def deposit(self,amount):\n",
-        "    self.__initial_balance += amount\n",
+        "    self.initial_balance += amount\n",
         "\n",
         "  def withdraw(self,amount):\n",
-        "     self.__initial_balance -= amount\n",
+        "    if amount>self.initial_balance:\n",
+        "      print(\"Not enough funds\")\n",
+        "    else:\n",
+        "      self.initial_balance -= amount\n",
         "\n",
         "  def check_balance(self):\n",
-        "     return \"Account_number : \"+str(self.__account_number)+\" Balance : \"+str(self.__initial_balance)\n",
+        "    print(f\"Your Balance is {self.initial_balance}\")\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return f\"Account number: {self.account_number}, Balance: {self.initial_balance}\"\n",
+        "\n",
+        "all_accounts={}\n",
+        "\n",
+        "while True:\n",
+        "    print(\"\\n1. Create Account\")\n",
+        "    print(\"2. Deposit\")\n",
+        "    print(\"3. Withdraw\")\n",
+        "    print(\"4. Check balance\")\n",
+        "    print(\"5. Exit\")\n",
+        "    choice = int(input(\"Enter your choice: \"))\n",
+        "\n",
+        "    if choice == 1:\n",
+        "        account_number = int(input(\"Enter a new account number: \"))\n",
+        "        initial_balance = float(input(\"Enter the initial balance: \"))\n",
+        "        all_accounts[account_number] = BankAccount(account_number, initial_balance)\n",
+        "        print(f\"Account {account_number} created successfully!\")\n",
+        "\n",
+        "    elif choice == 2:\n",
+        "        account_number = int(input(\"Enter the account number: \"))\n",
+        "        if account_number in all_accounts:\n",
+        "            amount = float(input(\"Enter the amount to deposit: \"))\n",
+        "            all_accounts[account_number].deposit(amount)\n",
+        "            print(f\"Deposited {amount} to account {account_number}\")\n",
+        "        else:\n",
+        "            print(\"Account not found!\")\n",
+        "\n",
+        "    elif choice == 3:\n",
+        "        account_number = int(input(\"Enter the account number: \"))\n",
+        "        if account_number in all_accounts:\n",
+        "            amount = float(input(\"Enter the amount to withdraw: \"))\n",
+        "            all_accounts[account_number].withdraw(amount)\n",
+        "        else:\n",
+        "            print(\"Account not found!\")\n",
+        "\n",
+        "    elif choice == 4:\n",
+        "        account_number = int(input(\"Enter the account number: \"))\n",
+        "        if account_number in all_accounts:\n",
+        "            all_accounts[account_number].check_balance()\n",
+        "        else:\n",
+        "            print(\"Account not found!\")\n",
+        "\n",
+        "    elif choice == 5:\n",
+        "        print(\"Exiting...\")\n",
+        "        break\n",
+        "\n",
+        "    else:\n",
+        "        print(\"Invalid choice! Please try again.\")\n",
         "\n",
         "\n",
-        "account1 = BankAccount(12345,5000)\n",
         "\n",
-        "account1.deposit(100)\n",
-        "account1.withdraw(50)\n",
-        "\n",
-        "account1.check_balance()"
+        "print(\"All account information : \")\n",
+        "for acc_number, acc_obj in all_accounts.items():\n",
+        "    print(f\"Account Number: {acc_number}, Balance: {acc_obj.initial_balance}\")"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 38
+          "base_uri": "https://localhost:8080/"
         },
         "id": "uTnNgYqVDs68",
-        "outputId": "b2725d25-b264-41ea-ce85-e54f66762f3b"
+        "outputId": "7880d7b5-8a77-4632-9b9b-fb8bb82104be"
       },
-      "execution_count": 59,
+      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'Account_number : 12345 Balance : 5050'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 59
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "1. Create Account\n",
+            "2. Deposit\n",
+            "3. Withdraw\n",
+            "4. Check balance\n",
+            "5. Exit\n",
+            "Enter your choice: 1\n",
+            "Enter a new account number: 12345\n",
+            "Enter the initial balance: 4000\n",
+            "Account 12345 created successfully!\n",
+            "\n",
+            "1. Create Account\n",
+            "2. Deposit\n",
+            "3. Withdraw\n",
+            "4. Check balance\n",
+            "5. Exit\n",
+            "Enter your choice: 2\n",
+            "Enter the account number: 12345\n",
+            "Enter the amount to deposit: 500\n",
+            "Deposited 500.0 to account 12345\n",
+            "\n",
+            "1. Create Account\n",
+            "2. Deposit\n",
+            "3. Withdraw\n",
+            "4. Check balance\n",
+            "5. Exit\n",
+            "Enter your choice: 1\n",
+            "Enter a new account number: 67890\n",
+            "Enter the initial balance: 5000\n",
+            "Account 67890 created successfully!\n",
+            "\n",
+            "1. Create Account\n",
+            "2. Deposit\n",
+            "3. Withdraw\n",
+            "4. Check balance\n",
+            "5. Exit\n",
+            "Enter your choice: 3\n",
+            "Enter the account number: 67890\n",
+            "Enter the amount to withdraw: 200\n",
+            "\n",
+            "1. Create Account\n",
+            "2. Deposit\n",
+            "3. Withdraw\n",
+            "4. Check balance\n",
+            "5. Exit\n",
+            "Enter your choice: 5\n",
+            "Exiting...\n",
+            "All account information : \n",
+            "Account Number: 12345, Balance: 4500.0\n",
+            "Account Number: 67890, Balance: 4800.0\n"
+          ]
         }
       ]
     },
