--- a/Chapter_10.ipynb
+++ b/Chapter_10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoWZM5pUNmdRrF+ofHz51f",
+      "authorship_tag": "ABX9TyPakYD5iZLLoHanplLs2qMT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,9 +67,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TZyxpgfASrsd",
-        "outputId": "2203061a-ddbd-4618-865c-8cb665a8fd74"
+        "outputId": "c3a176cc-045e-4008-93c8-7664b433aa13"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,7 +90,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -125,7 +125,7 @@
         "id": "qvLdfewtVRQ7",
         "outputId": "fc363cd2-94d4-4525-8f98-a14f5fefc39f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +159,7 @@
         "id": "3mjjhngUV_bp",
         "outputId": "8240a5d7-2741-4e84-f839-a19eabad6b15"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -191,7 +191,7 @@
         "id": "_4861UjWWcEn",
         "outputId": "c7e9a92e-401d-4c67-c65d-6664311f6601"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +217,7 @@
         "id": "J1Msvw2fW0io",
         "outputId": "dcc4dba8-8b78-46df-9285-97a61f451312"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -243,7 +243,7 @@
         "id": "lTa1idskXL6-",
         "outputId": "1c44be71-87b9-4e65-e7e1-b7a2101a3c09"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -291,7 +291,7 @@
         "id": "aT7tC79-XkRT",
         "outputId": "fccfd149-37d0-4248-c2c4-19c643301a95"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -317,7 +317,7 @@
         "id": "0vGTTW0KX_iI",
         "outputId": "0fcff259-b9ab-4505-cb60-8d2d2ee8d4d4"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -346,7 +346,7 @@
         "id": "LX2zFmzNYC41",
         "outputId": "1f222d48-85cc-49f4-a569-a9d6f9acf2e0"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,7 +377,7 @@
         "id": "lDD-JFEIY2hy",
         "outputId": "41324447-da66-42ae-c124-fe1eebd20be7"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -414,7 +414,7 @@
         "id": "28vUwAN8ZnPe",
         "outputId": "16184982-c420-434d-8e06-349ad4d4c521"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -443,7 +443,7 @@
         "id": "unKF8kmraPt_",
         "outputId": "0de3f055-fe9f-434e-ffdc-f988e4ee75cf"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -470,7 +470,7 @@
         "id": "S7ztmjUaa5yW",
         "outputId": "4a94be74-046a-4dc1-cff9-541af46fc3d4"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,7 +496,7 @@
         "id": "VgkkW_rhbOd0",
         "outputId": "ba655091-5d54-4b44-e68c-655a3438e0d9"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -523,7 +523,7 @@
         "id": "487U92PubZ7b",
         "outputId": "e26b3bd2-1e4f-48c9-99a9-84153f1dffee"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -549,7 +549,7 @@
         "id": "Nt4NOlRPbkQ_",
         "outputId": "45338348-d0f8-4254-b01e-badf9387399b"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -602,7 +602,7 @@
         "id": "bartid5kcGbo",
         "outputId": "f6082f0b-7e7f-49ea-9161-1af5fffa21ec"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -643,7 +643,7 @@
         "id": "4REB6W3ggiVh",
         "outputId": "5ec35d95-602e-4ca0-8407-decd4480758b"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -684,7 +684,7 @@
         "id": "BjwhQYe2g7jM",
         "outputId": "14cadf03-81b3-4eee-f93e-1a588aac9f7b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -739,7 +739,7 @@
         "id": "hMbd8lW-ijZf",
         "outputId": "b3a46371-e96c-4897-d4fb-e2685d3b5260"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -774,7 +774,7 @@
         "id": "fizJGsMpkxBa",
         "outputId": "3a60c9f5-7acd-49aa-9948-d124088b15e8"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -800,7 +800,7 @@
         "id": "uuLchm0zlIn-",
         "outputId": "842484e3-edc8-45c2-ef7c-0aa6e2558902"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -826,7 +826,7 @@
         "id": "5tuL9jG1liq_",
         "outputId": "66bbdbd3-42b9-4efa-c271-af071d0464db"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -863,7 +863,7 @@
         "id": "n1l6l-qrmyq8",
         "outputId": "16eb8031-147f-4474-ee25-e3a0a0dc1fb3"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -887,7 +887,7 @@
         "id": "tzj1bLbfnuau",
         "outputId": "eb18fce1-fa02-4c46-853b-13fa80b8a866"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -909,12 +909,245 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "data = np.random.randint(10,100,60)\n",
+        "data.reshape(30,2)"
+      ],
       "metadata": {
-        "id": "3Yls5lqTqzTW"
+        "id": "3Yls5lqTqzTW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "34e41538-e35f-4169-abd9-a6ce83ce2c48"
       },
-      "execution_count": null,
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[69, 96],\n",
+              "       [66, 72],\n",
+              "       [98, 36],\n",
+              "       [18, 25],\n",
+              "       [54, 76],\n",
+              "       [58, 68],\n",
+              "       [69, 91],\n",
+              "       [51, 98],\n",
+              "       [94, 72],\n",
+              "       [86, 87],\n",
+              "       [81, 30],\n",
+              "       [99, 76],\n",
+              "       [95, 98],\n",
+              "       [27, 88],\n",
+              "       [72, 91],\n",
+              "       [54, 38],\n",
+              "       [82, 35],\n",
+              "       [54, 54],\n",
+              "       [23, 22],\n",
+              "       [93, 39],\n",
+              "       [34, 54],\n",
+              "       [39, 34],\n",
+              "       [60, 11],\n",
+              "       [98, 13],\n",
+              "       [42, 77],\n",
+              "       [37, 17],\n",
+              "       [60, 21],\n",
+              "       [58, 40],\n",
+              "       [42, 17],\n",
+              "       [98, 93]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data2 = data.flatten() # Will create a copy\n",
+        "data2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NVFXoDLiWA4r",
+        "outputId": "10de95f3-5aad-42f9-e8a7-05e7590f62d8"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([69, 96, 66, 72, 98, 36, 18, 25, 54, 76, 58, 68, 69, 91, 51, 98, 94,\n",
+              "       72, 86, 87, 81, 30, 99, 76, 95, 98, 27, 88, 72, 91, 54, 38, 82, 35,\n",
+              "       54, 54, 23, 22, 93, 39, 34, 54, 39, 34, 60, 11, 98, 13, 42, 77, 37,\n",
+              "       17, 60, 21, 58, 40, 42, 17, 98, 93])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data2[0] = 1000\n",
+        "print(data2)\n",
+        "print(data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OTgP-t5dXFop",
+        "outputId": "b0d41260-392f-40a5-c88b-a49286fc59c8"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1000   96   66   72   98   36   18   25   54   76   58   68   69   91\n",
+            "   51   98   94   72   86   87   81   30   99   76   95   98   27   88\n",
+            "   72   91   54   38   82   35   54   54   23   22   93   39   34   54\n",
+            "   39   34   60   11   98   13   42   77   37   17   60   21   58   40\n",
+            "   42   17   98   93]\n",
+            "[69 96 66 72 98 36 18 25 54 76 58 68 69 91 51 98 94 72 86 87 81 30 99 76\n",
+            " 95 98 27 88 72 91 54 38 82 35 54 54 23 22 93 39 34 54 39 34 60 11 98 13\n",
+            " 42 77 37 17 60 21 58 40 42 17 98 93]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_T = np.random.randint(10,100,20).reshape(2,10)"
+      ],
+      "metadata": {
+        "id": "_X-YJ3E4XhrA"
+      },
+      "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_T"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LfFAU00xX25h",
+        "outputId": "8b9c0b19-09da-4e34-9e9d-e7fa1ac1373a"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[63, 16, 47, 12, 91, 31, 79, 88, 26, 80],\n",
+              "       [83, 61, 94, 12, 95, 37, 93, 46, 21, 21]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.resize(data_T,(5,10))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tdzhj5ezX5s4",
+        "outputId": "f11e7588-6188-4cfe-b13f-3fba2b2ae681"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[63, 16, 47, 12, 91, 31, 79, 88, 26, 80],\n",
+              "       [83, 61, 94, 12, 95, 37, 93, 46, 21, 21],\n",
+              "       [63, 16, 47, 12, 91, 31, 79, 88, 26, 80],\n",
+              "       [83, 61, 94, 12, 95, 37, 93, 46, 21, 21],\n",
+              "       [63, 16, 47, 12, 91, 31, 79, 88, 26, 80]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_1t = np.array([1000,3000])\n",
+        "data_2t = np.array([2000,5000])\n",
+        "\n",
+        "np.concatenate((data_1t,data_2t))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "70rkI64OYh9l",
+        "outputId": "af4726b6-5c68-4bc3-a8da-a0837bf60e76"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1000, 3000, 2000, 5000])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.vstack((data_1t,data_2t))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WuvG-jrwY2Zn",
+        "outputId": "e35dd91a-5534-4eb1-9ff3-fe7018e84223"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1000, 3000],\n",
+              "       [2000, 5000]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -947,7 +1180,7 @@
         "id": "lgGgsLdnoF7U",
         "outputId": "c10931b7-1a93-45a6-b0cf-92d5fa25b15b"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -973,9 +1206,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JTE6y5-GpznV",
-        "outputId": "77d5cd50-b2a3-4aac-c616-0d61bf8076f9"
+        "outputId": "c0a0c53a-78f5-470e-d48b-d5b885025884"
       },
-      "execution_count": 31,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -988,12 +1221,120 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "copy_of_cd = np.copy(customer_data)\n",
+        "mask = np.isnan(copy_of_cd)\n",
+        "\n",
+        "np.roll(copy_of_cd,shift=-1)"
+      ],
       "metadata": {
-        "id": "kYCPBB5_qWwB"
+        "id": "kYCPBB5_qWwB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f68c113c-1693-4e18-d5b2-c700ffecff04"
       },
-      "execution_count": null,
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([150.,  nan, 200., 156., 100.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##File Handling"
+      ],
+      "metadata": {
+        "id": "GtSfWSGAcNA0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age = np.array([18,25,33,44,22,45])\n",
+        "\n",
+        "np.save(\"age.npy\",age)"
+      ],
+      "metadata": {
+        "id": "tv-LFhSgcV-u"
+      },
+      "execution_count": 30,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "loaded_age = np.load(\"age.npy\")\n",
+        "\n",
+        "loaded_age"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iTcO7Kv0cpBy",
+        "outputId": "1bbe1561-b700-414e-bad3-0eb7c9be3c51"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([18, 25, 33, 44, 22, 45])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.savetxt(\"age.txt\",loaded_age,delimiter=\",\")\n"
+      ],
+      "metadata": {
+        "id": "qU1GnULmc0-2"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_age = np.loadtxt(\"age.txt\")\n",
+        "new_age"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h-fjzWf9dDiQ",
+        "outputId": "42833eab-b406-4a21-8078-5232cda7348a"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([18., 25., 33., 44., 22., 45.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
     }
   ]
 }
